iter_language/tests/corpus/valid/runner-iteration-timeout.iter
queue memory

workspace clone {
  base = "."
  excludes = []
  preserve_mtime = true
  apply_back { mode = sync }}

agent claude {
  mode = print
  command = "claude"
}

runner {
  agent = claude
  workspace = clone
  queue = memory
  continue_on_error = true
  behavior = loop
  iteration_timeout_secs = 15m
  prompt = "iterate"
}
