iter_language/tests/corpus/invalid/trigger-in-iterfile.iter
queue memory
workspace local { base = "." }
agent claude {
  mode = print
  command = "claude"
}
trigger cron { schedule = "0 0 * * *" }
